# p4est-cmake

./: CMakeLists.txt  LICENSE  README.md  hello.c
.github/workflows/: ci.yml  ci_mac.yml
cmake/: compiler_find.cmake  p4est.cmake
cmake/Modules/: Findp4est.cmake  Findsc.cmake
